--- a/post.html
+++ b/post.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+    <header class="masthead" style="background-image: url('https://cityofdavis.org/Home/ShowPublishedImage/2045/635709342322970000')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
