--- a/post.html
+++ b/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
   <head>
 
@@ -160,13 +160,30 @@
 
 
 حساب پس انداز (Saving Account)
-معمولاً هنگام باز کردن checking account کارمند بانک از شما می‌پرسد که آیا saving account هم می‌خواهید یا نه. شما مجبور به باز کردن این حساب نیستید و پس از باز کردن checking account هر زمان که بخواهید می‌توانید حساب saving ایجاد کنید و پول به آن‌ منتقل کنید. در نظر داشته باشید که محدودیتی برای برداشت از موجودی saving account در هر ماه وجود دارد و اگر بیش از دفعات خاصی‌ از این حساب پول بردارید باید fee بدهید.
+معمولاً هنگام باز کردن checking account کارمند بانک از شما می‌پرسد
+              که آیا saving account هم می‌خواهید یا نه.
+              شما مجبور به باز کردن این حساب نیستید و پس از باز کردن checking account هر زمان که بخواهید می‌توانید
+              حساب saving ایجاد کنید و پول به آن‌ منتقل کنید.
+              در نظر داشته باشید که محدودیتی برای برداشت از موجودی saving account در هر ماه وجود دارد
+              و اگر بیش از دفعات خاصی‌ از این حساب پول بردارید باید fee بدهید.
 حساب اعتباری (Credit Card)
-معمولا اکثر تراکنش‌ها در آمریکا از طریق کارت اعتباری (credit card) انجام می‌‌شود. برای گرفتن credit card احتیاج به credit history دارید که اگر در آمریکا زندگی‌ نکرده باشید این اطلاعات وجود نخواهد داشت. به همین دلیل در ابتدای ورود باید به جای credit card درخواست secure credit card بکنید. به این دلیل به این کارت secure credit card می‌گویند که برای گرفتن آن‌ باید مبلغی را به عنوان security deposit به بانک پرداخت کنید. اعتبار (credit line) برای secure credit card به اندازه مبلغ security deposit خواهد بود. میزان اعتبار شما با credit score سنجیده می‌شود که از جمله موارد تعیین کننده آن‌ پرداخت به موقع بدهی credit card و درصد استفاده از اعتبار موجود (credit utilization) است. پس حتماً همیشه بدهی credit card  خود را قبل از موعد مقرر (payment due date) پرداخت کنید و credit utilization را کمتر از ۳% نگه دارید.
-بعضی‌ credit card ها annual fee دارند در حالی‌ که بسیاری از دیگر مجانی‌ هستند، دسته اول توصیه نمی شوند. همچنین بسیاری از credit card ها برای سال اول عضویت (APR=Annual Percentage Rate) صفر درصد دارند.
-در آمریکا مفهومی‌ به اسم identity theft وجود دارد که فرد دیگری از social security number و نام شما برای گرفتن وام، باز کردن حساب و غیره استفاده می‌کند. به همین منظور توصیه می‌‌شود که credit report خود را هر ۶ ماه یکبار از طریق وبسایت زیر درخواست کنید.
+معمولا اکثر تراکنش‌ها در آمریکا از طریق کارت اعتباری (credit card) انجام می‌‌شود.
+              برای گرفتن credit card احتیاج به credit history دارید که اگر در آمریکا زندگی‌ نکرده باشید این اطلاعات وجود نخواهد داشت.
+              به همین دلیل در ابتدای ورود باید به جای credit card درخواست secure credit card بکنید.
+              به این دلیل به این کارت secure credit card می‌گویند که برای گرفتن آن‌ باید مبلغی را به عنوان security deposit به بانک پرداخت کنید.
+              اعتبار (credit line) برای secure credit card به اندازه مبلغ security deposit خواهد بود.
+              میزان اعتبار شما با credit score سنجیده می‌شود که از جمله موارد تعیین کننده آن‌ پرداخت به موقع بدهی credit card و درصد استفاده از اعتبار موجود (credit utilization) است.
+              پس حتماً همیشه بدهی credit card  خود را قبل از موعد مقرر (payment due date) پرداخت کنید و credit utilization را کمتر از ۳% نگه دارید
+              .
+بعضی‌ credit card ها annual fee دارند در حالی‌ که بسیاری از دیگر مجانی‌ هستند، دسته اول توصیه نمی شوند.
+              همچنین بسیاری از credit card ها برای سال اول عضویت (APR=Annual Percentage Rate) 
+              صفر درصد دارند.
+در آمریکا مفهومی‌ به اسم identity theft وجود دارد که فرد دیگری از social security number و نام شما برای گرفتن وام، باز کردن حساب و غیره استفاده می‌کند.
+              به همین منظور توصیه می‌‌شود که credit report خود را هر ۶ ماه یکبار از طریق وبسایت زیر درخواست کنید.
 https://www.annualcreditreport.com/index.action
- همچنین می‌‌توانید از وبسایت‌های مجانی‌ که برای credit management وجود دارند استفاده کنید. این وبسایت‌ها تمام حساب‌ها و ... که به نام شما وجود دارند را track می کنند و اگر فعالیت مشکوکی مشاهده کردید می‌‌توانید آن‌ را به بانک گزارش کنید.
+ همچنین می‌‌توانید از وبسایت‌های مجانی‌ که برای credit management وجود دارند استفاده کنید.
+              این وبسایت‌ها تمام حساب‌ها و ... که به نام شما وجود دارند را track می کنند و اگر فعالیت مشکوکی مشاهده کردید می‌‌توانید آن‌ را به بانک گزارش کنید
+              .
 Credit Karma: https://www.creditkarma.com/auth/logon/
 Mint: https://credit.mint.com/
   
