--- a/post.html
+++ b/post.html
@@ -86,27 +86,27 @@
 
             <h2 class="section-heading">Housing</h2>
 
-            <p><bdo dir="rtl">
+            <div dir="rtl">
             دیویس یک شهر کوچک پرجمعیت دانشجویی در حال رشد هست. و متاسفانه در حال حاضر تعداد خانه‌های خوب و نسبتا ارزان از تعداد متقاضیان آن به مراتب کم‌تر
               هست. بنابراین اگر قصد زندگی در این شهر را دارید در اولین فرصت اقدام به پیدا کردن یک مکان مناسب برای زندگی کنید.
               برای دانشجویان سال اول کارشناسی خوابگاه در نظر گرفته شده اما متاسفانه برای دانشجو‌های مقاطع بالاتر هیچ تضمینی برای گرفتن خانه وجود ندارد.
               ما در این قسمت سعی می‌کنیم راه‌های پیدا کردن خانه‌ی مناسب رو برای شما شرح بدهیم:
-            </bdo></p>
+            </div>
 
             <p>UC Davis Facebook Groups</p>
-            <p><bdo dir="rtl">
+            <div dir="rtl">
               شما می‌توانید با اضافه کردن ایمیل دانشگاه یوسی دیویس خود به اکانت فیس‌بوک‌تان در این صفحات عضو شوید و پست بگذارید یا پست‌های مربوط به 
             خانه را دنبال کنید. در این پست‌ها خوب هست که به انتظارهای خودتان از خانه فکر کنید و سعی کنید تا موقعیت خانه و دسترسی آن به مارکت، دانشگاه و اتوبوس را در نظر 
             بگیرید.
             ما پیشنهاد می‌کنیم مسائل زیر را در نظر بگیرید:
             تعداد هم‌خانه‌ها، مشترک بودن یا نبودن اتاق خواب، احتمال داشتن حیوان خانگی،
             و تعداد دستشویی‌های موجود در خانه. هم‌چنین اگر خواب سبکی دارید موقعیت خانه را از لحاظ نزدیک بودن به ریل راه‌آهن در نظر بگیرید!
-            </bdo></p>
+            </div>
             
             <p>Craiglist</p>
-            <p><bdo dir="rtl">
+            <div dir="rtl">
             در استفاده از این روش احتمال کلاه‌برداری را در نظر بگیرید.
-            </bdo></p>
+            </div>
 
             <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
 
