--- a/post.html
+++ b/post.html
@@ -94,11 +94,17 @@
             </div>
 
             <h6>UC Davis Facebook Groups</h6>
-            <a href="https://www.facebook.com/groups/UCDhousing/">UCDhousing</a>, 
+            <p>
+              <a href="https://www.facebook.com/groups/UCDhousing/">UCDhousing</a>
+            </p>
             
-            <a href="https://www.facebook.com/groups/766082423502142/">UCDavis Last Minute Housing</a>,
+            <p>
+            <a href="https://www.facebook.com/groups/766082423502142/">UCDavis Last Minute Housing</a>
+            </p>
             
+            <p>
             <a href="https://www.facebook.com/groups/286762898448011/">UC Davis Housing--Grad/Professional Students</a>
+            </p>
 
             <div dir="rtl">
               شما می‌توانید با اضافه کردن ایمیل دانشگاه یوسی دیویس خود به اکانت فیس‌بوک‌تان در این صفحات عضو شوید و پست بگذارید یا پست‌های مربوط به 
