--- a/about.html
+++ b/about.html
@@ -71,9 +71,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+          <div dir="rtl">
+             این وب‌سایت برای گردآوری دانش دوستانی که مدتی در آمریکا و به طور ویژه در دیویس زندگی کرده‌اند، طراحی شده است.
+            روند اپلای و زندگی در شهر / کشور جدید راهی سخت و پراسترس هست. هدف ما کم کردن این استرس برای تمام افرادی است که به نحوی با مهاجرت و زندگی در خارج از کشور
+              رو به رو شده‌اند.
+              امیدواریم که مطالب گرد‌اوری شده به شما کمک کنند تا تجربه‌ی آسان‌تری داشته باشید.
+            </div>          
         </div>
       </div>
     </div>
