--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-8 col-md-10 mx-auto" align="justify">
           <div dir="rtl">
              این وب‌سایت برای گردآوری دانش دوستانی که مدتی در آمریکا و به طور ویژه در دیویس زندگی کرده‌اند، طراحی شده است.
             روند اپلای و زندگی در شهر / کشور جدید راهی سخت و پراسترس هست. هدف ما کم کردن این استرس برای تمام افرادی است که به نحوی با مهاجرت و زندگی در خارج از کشور
