--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         <div class="col-lg-8 col-md-10 mx-auto" align="justify">
           <div dir="rtl">
              این وب‌سایت برای گردآوری دانش دوستانی که مدتی در آمریکا و به طور ویژه در دیویس زندگی کرده‌اند، طراحی شده است.
-            روند اپلای و زندگی در شهر / کشور جدید راهی سخت و پراسترس هست. هدف ما کم کردن این استرس برای تمام افرادی است که به نحوی با مهاجرت و زندگی در خارج از کشور
+            روند اپلای و زندگی در شهر یا کشور جدید راهی سخت و پراسترس هست. هدف ما کم کردن این استرس برای تمام افرادی است که به نحوی با مهاجرت و زندگی در خارج از کشور
               رو به رو شده‌اند.
               امیدواریم که مطالب گرد‌اوری شده به شما کمک کنند تا تجربه‌ی آسان‌تری داشته باشید.
             </div>          
