--- a/post-startup.html
+++ b/post-startup.html
@@ -76,7 +76,7 @@
           <div class="col-lg-8 col-md-10 mx-auto" align="justify">
             <div dir="rtl">
              مطالب زیر به منظور پاسخ‌گویی به سوالات دانشجویان ورودی جدید دیویس گرآوری شده است.
-              امیدواریم موضوعات جمع‌آوری شده برای ورودیان جدید شهر دیویس و ساکنین کنونی آن مفید باشد. :)
+              امیدواریم موضوعات جمع‌آوری شده برای ورودیان جدید شهر دیویس و ساکنین کنونی آن مفید باشد.
             </div>
 
             <h2 class="section-heading">Housing</h2>
