--- a/post-startup.html
+++ b/post-startup.html
@@ -237,7 +237,7 @@
               <div dir="auto">
 
 ارجاع مقاله یا کار علمی (گزارش، اختراع، ...) توسط منابع دیگر را citation می‌گویند. ارجاع‌ها خود به دو دسته‌‌ی independent and dependent دسته بندی می‌شوند. 
-Dependent citation: اگر مقاله‌ی شما توسط یک مقاله دیگر که اسم نویسنده ای مشترک دارد ارجاع داده شود، به آن dependent citationمی‌گویند. در غیر این صورت سایتیشن independent  هست. شایان ذکر است که ارجاعات independent دارای اعتبار و اهمیت بیش‌تری هستند.  
+اگر مقاله‌ی شما توسط یک مقاله دیگر که اسم نویسنده ای مشترک دارد ارجاع داده شود، به آن dependent citationمی‌گویند. در غیر این صورت سایتیشن independent  هست. شایان ذکر است که ارجاعات independent دارای اعتبار و اهمیت بیش‌تری هستند.  
 حائز شرایط بودن برای EB1 and EB2 به صورت عمده به تعداد independent citation بستگی دارد. 
 البته رشته و کشور تبعیت متقاضی نیز از موارد دیگر هست. برای مثال در رشته مهندسی عمران، برای یک ایرانی حدود 30 independent citation نیاز است که حائز شرایط بشود. این مورد را می‌توانید مستقیما از وکیل wegreened بپرسید تا از شرایط خودتان مطلع باشید. در سوال پرسیدن از وکیل حتما توصیه می‌کنیم تمام سوالات خود را بدون ملاحظه بپرسید و خجالت نکشید!
 علاوه بر تعداد ارجاعات که توضیح دادیم، داشتن اختراع، داوری کردن لااقل ۱۰ مقاله، پوشش علم شما توسط رسانه ها، حضور در کنفرانس های خاص از دیگر مواردی هستن که به کیس شما می‌تواند کمک کند. 
