--- a/post-startup.html
+++ b/post-startup.html
@@ -527,9 +527,10 @@ I485 هست که هدف آن بررسی بک‌گراند شماست.
 چهارشنبه ها و شنبه ها عصر توی پارک خیابون دوم و B کشاورزان اطراف دیویس محصولات خودشونو به فروش میذارن. دیدن یک بار این بازار و به همه توصیه میکنیم. حس خوبیه خرید از خود کشاورز 
           </p>
 <h6>Costco</h6>
+          <p dir="rtl">
 فروشگاهی هست بیرون شهر که نیاز به کارت عضویت داره. این فروشگاه اجناس و در تعداد یا مقیاس بیشتر میفروشه ولی قیمت به طرز محسوسی کم میشه. خرید از فروشگاه توصیه میشه. میتونین به صورت گروهی و ride sharing به سمتش حرکت کنین. محصولات در مقیاس بزرگتر و میتونین با هم تقسیم کنین.
+          </p>
 
-          
         </div>
           
 <h6>Online Shopping</h6>    
