--- a/post-startup.html
+++ b/post-startup.html
@@ -130,9 +130,11 @@
             </div>
             
             <br />
-            <h6> <a href="https://sacramento.craigslist.org/search/apa?query=Davis
+            <p>
+              <a href="https://sacramento.craigslist.org/search/apa?query=Davis
               &sort=pricedsc&search_distance=4&postal=95616&availabilityMode=0&sale_date=all+dates">
-              Craigslist</a></h6>            
+                Craigslist</a>
+            </p>
             <div dir="rtl">            
             در استفاده از این روش احتمال کلاه‌برداری را در نظر بگیرید.
             </div>
