--- a/post-startup.html
+++ b/post-startup.html
@@ -50,8 +50,9 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('https://cityofdavis.org/Home/ShowPublishedImage/1584/635690190686130000');
-                                    background-size: cover;">
+<!--     <header class="masthead" style="background-image: url('https://cityofdavis.org/Home/ShowPublishedImage/1584/635690190686130000');
+                                    background-size: cover;"> -->
+      <header class="masthead">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
