--- a/post-startup.html
+++ b/post-startup.html
@@ -52,7 +52,9 @@
     <!-- Page Header -->
 <!--     <header class="masthead" style="background-image: url('https://cityofdavis.org/Home/ShowPublishedImage/1584/635690190686130000');
                                     background-size: cover;"> -->
-      <header class="masthead">
+    
+      <header class="masthead" style="background-image: url('https://images4.alphacoders.com/598/thumb-1920-598248.jpg');
+                                    background-size: cover;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
