--- a/post-startup.html
+++ b/post-startup.html
@@ -131,7 +131,14 @@
             تعداد هم‌خانه‌ها، مشترک بودن یا نبودن اتاق خواب، احتمال داشتن حیوان خانگی،
             و تعداد دستشویی‌های موجود در خانه. هم‌چنین اگر خواب سبکی دارید موقعیت خانه را از لحاظ نزدیک بودن به ریل راه‌آهن در نظر بگیرید!
             </div>
-            
+            <div dir="rtl">
+              هم‌چنین شما می‌توانید در ایمیل لیست گروه اینترنشنال دانشگاه عضو شوید و به صورت ماهیانه از خرید، فروش و یا موارد اجاره خانه آگاهی پیدا کنید:
+              
+              <p>
+            <a href="https://lists.ucdavis.edu/sympa/subscribe/sissbulletin">The SISS Housing Bulletin provides listings of items for sale, available housing,
+              and other related items.</a>
+            </p>
+        </div>
             <br />
             <p>
               <a href="https://sacramento.craigslist.org/search/apa?query=Davis
