--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,10 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post-startup.html">Start-up Package for Newly Addmitted Students</a>
+              <a class="nav-link" href="startup.html">Start-up Package for Newly Addmitted Students</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
