--- a/faq.html
+++ b/faq.html
@@ -92,18 +92,7 @@ Housing also depends but the minimum for 2 perhaps will be at around at least $1
             </p>
             </div>   
           <div dir="auto">
-2. کسی که به عنوان همراه میاد، امکان کار کردن نداره مطمئنا. اما میتونه به عنوان freelancer کار خودش رو انجام بده؟ مثلا یک محصولی رو تولید کنه (مثل طراحی لباس) و به خریداران خاص بفروشه؟ این کار مشکل قانونی براش ایجاد نمی کنه؟
-
-          </div>   
-          <div dir="auto">
-            <p>
-Any sales/job is legally prohibited.
-I don’t know about selling in medias such as telegram tho. 
-          
-            </p>
-          </div>   
-          <div dir="auto">
-3. وضعیت خود شهر Davis از لحاظ امنیت و آرامش چه شکلی هستش؟ آیا شهر شلوغیه؟ مردم شهر با دانشجوهای International خصوصاً ایرانی به چه صورت رفتار می کنن؟
+2. وضعیت خود شهر Davis از لحاظ امنیت و آرامش چه شکلی هستش؟ آیا شهر شلوغیه؟ مردم شهر با دانشجوهای International خصوصاً ایرانی به چه صورت رفتار می کنن؟
 
             </div>   
           <div dir="auto">
@@ -115,7 +104,7 @@ The international body is a big part of city so it is pretty ok.
             </p>
           </div>   
           <div dir="auto">
-4. در رابطه با دانشگاه، آیا دانشگاه امکانات رو برای دانشجوی Ph.D به اندازه کافی فراهم می کنه؟ امکانات هم از لحاظ تجهیزات فیلدی و آزمایشگاهی، هم امکانات رفاهی؟ برای مثال من اگر در نظر داشته باشم که در کنار تز دکترام کار پژوهشی انجام بدم، دانشگاه و اساتید Supportive هستن؟
+3. در رابطه با دانشگاه، آیا دانشگاه امکانات رو برای دانشجوی Ph.D به اندازه کافی فراهم می کنه؟ امکانات هم از لحاظ تجهیزات فیلدی و آزمایشگاهی، هم امکانات رفاهی؟ برای مثال من اگر در نظر داشته باشم که در کنار تز دکترام کار پژوهشی انجام بدم، دانشگاه و اساتید Supportive هستن؟
 
             </div>   
           <div dir="auto">
@@ -125,7 +114,7 @@ yes, depends on the department but most usually you are good to go. And yes you 
             </p>
           </div>   
           <div dir="auto">
-5. امکانات خوابگاهی دانشگاه خوب هست؟ چه برای یک فرد مجرد، چه متأهل؟
+4. امکانات خوابگاهی دانشگاه خوب هست؟ چه برای یک فرد مجرد، چه متأهل؟
 
             </div>   
           <div dir="auto">
@@ -136,7 +125,7 @@ So perhaps you need to look outside of uni for now. And you need to be fast. Dav
             </p>
             </div>   
           <div dir="auto">
-6. سوال آخرم در رابطه با بازار کار کالیفرنیاست که آیا یک فرد، البته با تلاش بسیار، قادر خواهد بود اونجا کار کنه؟ چون مطمئناً قصدم بعد از تحصیل جستجو برای کار خصوصاً کار آکادمیک و پژوهشی هستش.
+5. سوال آخرم در رابطه با بازار کار کالیفرنیاست که آیا یک فرد، البته با تلاش بسیار، قادر خواهد بود اونجا کار کنه؟
 
             </div>   
           <div dir="auto">
