adding donation button

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
           </div>
         </div>
+        <iframe src="https://givebutter.com/embed/c/pKzuSM" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script>
       </div>
     </footer>
 
