create a new page for donation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
               <a class="nav-link" href="startup.html">Start-up Package for Newly Addmitted Students</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="donation.html">Donation</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
