--- a/donation.html
+++ b/donation.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="donation.html">Donation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="startup.html">Start-up Package for Newly Addmitted Students</a>
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/donation-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
