add donation button

--- a/donation.html
+++ b/donation.html
@@ -71,12 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto" align="justify">
-          <div dir="rtl">
-             این وب‌سایت برای گردآوری دانش دوستانی که مدتی در آمریکا و به طور ویژه در دیویس زندگی کرده‌اند، طراحی شده است.
-            روند اپلای و زندگی در شهر یا کشور جدید راهی سخت و پراسترس هست. هدف ما کم کردن این استرس برای تمام افرادی است که به نحوی با مهاجرت و زندگی در خارج از کشور
-              رو به رو شده‌اند.
-              امیدواریم که مطالب گرد‌اوری شده به شما کمک کنند تا تجربه‌ی آسان‌تری داشته باشید.
-            </div>          
+          <iframe src="https://givebutter.com/embed/c/pKzuSM" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script>         
         </div>
       </div>
     </div>
